--- a/results/classifica.html
+++ b/results/classifica.html
@@ -1,143 +1,123 @@
 <html><head><title>Classifica dei Simboli</title></head><body>
 <h1>Classifica dei Simboli in Base alla Probabilità di Crescita</h1>
 <table border='1'><tr><th>Simbolo</th><th>Probabilità</th></tr>
-<tr><td>EURAUD</td><td>99.99%</td></tr>
-<tr><td>EW</td><td>99.90%</td></tr>
-<tr><td>RBUSD</td><td>99.89%</td></tr>
-<tr><td>AUDJPY</td><td>99.85%</td></tr>
-<tr><td>CADJPY</td><td>99.85%</td></tr>
-<tr><td>GBPJPY</td><td>99.80%</td></tr>
-<tr><td>GBPJPY</td><td>99.80%</td></tr>
-<tr><td>ETCUSD</td><td>99.79%</td></tr>
-<tr><td>NEOUSD</td><td>99.76%</td></tr>
-<tr><td>SCHW</td><td>99.66%</td></tr>
-<tr><td>DIS</td><td>99.63%</td></tr>
-<tr><td>ZCUSX</td><td>99.57%</td></tr>
-<tr><td>ACN</td><td>99.51%</td></tr>
-<tr><td>PEP</td><td>99.49%</td></tr>
-<tr><td>CL</td><td>99.42%</td></tr>
-<tr><td>HON</td><td>99.26%</td></tr>
-<tr><td>XMRUSD</td><td>99.25%</td></tr>
-<tr><td>BCHUSD</td><td>99.19%</td></tr>
-<tr><td>C</td><td>99.19%</td></tr>
-<tr><td>GOOGL</td><td>99.17%</td></tr>
-<tr><td>CHFJPY</td><td>99.16%</td></tr>
-<tr><td>EURNZD</td><td>99.05%</td></tr>
-<tr><td>USB</td><td>98.91%</td></tr>
-<tr><td>ATOMUSD</td><td>98.87%</td></tr>
-<tr><td>XAUUSD</td><td>98.85%</td></tr>
-<tr><td>USDJPY</td><td>98.83%</td></tr>
-<tr><td>ADAUSD</td><td>98.80%</td></tr>
-<tr><td>T</td><td>98.74%</td></tr>
-<tr><td>GCUSD</td><td>98.71%</td></tr>
-<tr><td>CME</td><td>98.70%</td></tr>
-<tr><td>ADP</td><td>98.68%</td></tr>
-<tr><td>EURJPY</td><td>98.65%</td></tr>
-<tr><td>LTCUSD</td><td>98.57%</td></tr>
-<tr><td>ZSUSX</td><td>98.55%</td></tr>
-<tr><td>FIS</td><td>98.53%</td></tr>
-<tr><td>GM</td><td>98.37%</td></tr>
-<tr><td>USDCHF</td><td>98.30%</td></tr>
-<tr><td>WMT</td><td>98.27%</td></tr>
-<tr><td>DASHUSD</td><td>98.25%</td></tr>
-<tr><td>TSLA</td><td>98.19%</td></tr>
-<tr><td>KO</td><td>98.09%</td></tr>
-<tr><td>AAPL</td><td>98.07%</td></tr>
-<tr><td>INTU</td><td>97.97%</td></tr>
-<tr><td>ZECUSD</td><td>97.62%</td></tr>
-<tr><td>LINKUSD</td><td>97.40%</td></tr>
-<tr><td>AXP</td><td>97.35%</td></tr>
-<tr><td>V</td><td>97.34%</td></tr>
-<tr><td>SYK</td><td>97.22%</td></tr>
-<tr><td>ICE</td><td>97.06%</td></tr>
-<tr><td>XTZUSD</td><td>96.79%</td></tr>
-<tr><td>EOSUSD</td><td>96.79%</td></tr>
-<tr><td>ETHUSD</td><td>96.04%</td></tr>
-<tr><td>OJUSX</td><td>95.97%</td></tr>
-<tr><td>TMUS</td><td>95.96%</td></tr>
-<tr><td>DOGEUSD</td><td>95.89%</td></tr>
-<tr><td>EL</td><td>95.47%</td></tr>
-<tr><td>SO</td><td>95.29%</td></tr>
-<tr><td>USDCAD</td><td>95.20%</td></tr>
-<tr><td>COST</td><td>95.13%</td></tr>
-<tr><td>META</td><td>95.11%</td></tr>
-<tr><td>BTCUSD</td><td>94.99%</td></tr>
-<tr><td>TRXUSD</td><td>94.98%</td></tr>
-<tr><td>EURGBP</td><td>94.96%</td></tr>
-<tr><td>NOW</td><td>94.37%</td></tr>
-<tr><td>XRPUSD</td><td>93.76%</td></tr>
-<tr><td>IBM</td><td>93.69%</td></tr>
-<tr><td>ABT</td><td>93.61%</td></tr>
-<tr><td>BKNG</td><td>92.37%</td></tr>
-<tr><td>TJX</td><td>92.03%</td></tr>
-<tr><td>LMT</td><td>89.28%</td></tr>
-<tr><td>BNBUSD</td><td>88.98%</td></tr>
-<tr><td>DE</td><td>7.09%</td></tr>
-<tr><td>CRM</td><td>7.05%</td></tr>
-<tr><td>ITW</td><td>5.68%</td></tr>
-<tr><td>CCUSD</td><td>5.35%</td></tr>
-<tr><td>BTDR</td><td>5.17%</td></tr>
-<tr><td>PYPL</td><td>5.13%</td></tr>
-<tr><td>GBPCHF</td><td>4.06%</td></tr>
-<tr><td>EURCHF</td><td>4.00%</td></tr>
-<tr><td>SCHL</td><td>3.93%</td></tr>
-<tr><td>NKE</td><td>3.92%</td></tr>
-<tr><td>APD</td><td>3.69%</td></tr>
-<tr><td>ORCL</td><td>3.51%</td></tr>
-<tr><td>MCD</td><td>3.50%</td></tr>
-<tr><td>TGT</td><td>3.15%</td></tr>
-<tr><td>NZDUSD</td><td>3.10%</td></tr>
-<tr><td>ZTS</td><td>2.97%</td></tr>
-<tr><td>BDX</td><td>2.79%</td></tr>
-<tr><td>AMGN</td><td>2.66%</td></tr>
-<tr><td>LOW</td><td>2.55%</td></tr>
-<tr><td>GS</td><td>2.51%</td></tr>
-<tr><td>GE</td><td>2.51%</td></tr>
-<tr><td>MSFT</td><td>1.99%</td></tr>
-<tr><td>LNTH</td><td>1.90%</td></tr>
-<tr><td>FDX</td><td>1.80%</td></tr>
-<tr><td>EURUSD</td><td>1.79%</td></tr>
-<tr><td>XAGUSD</td><td>1.72%</td></tr>
-<tr><td>XLMUSD</td><td>1.68%</td></tr>
-<tr><td>LLY</td><td>1.68%</td></tr>
-<tr><td>NIO</td><td>1.65%</td></tr>
-<tr><td>AMZN</td><td>1.56%</td></tr>
-<tr><td>PFE</td><td>1.53%</td></tr>
-<tr><td>MMC</td><td>1.51%</td></tr>
-<tr><td>JNJ</td><td>1.49%</td></tr>
-<tr><td>GBPUSD</td><td>1.45%</td></tr>
-<tr><td>INTC</td><td>1.37%</td></tr>
-<tr><td>CVX</td><td>1.35%</td></tr>
-<tr><td>NAAS</td><td>1.28%</td></tr>
-<tr><td>BMY</td><td>1.24%</td></tr>
-<tr><td>ADI</td><td>1.23%</td></tr>
-<tr><td>NFLX</td><td>1.21%</td></tr>
-<tr><td>DUK</td><td>1.20%</td></tr>
-<tr><td>CVS</td><td>1.19%</td></tr>
-<tr><td>ADBE</td><td>1.09%</td></tr>
-<tr><td>CAT</td><td>1.07%</td></tr>
-<tr><td>JPM</td><td>1.01%</td></tr>
-<tr><td>PNC</td><td>0.98%</td></tr>
-<tr><td>NRG</td><td>0.97%</td></tr>
-<tr><td>AUDUSD</td><td>0.93%</td></tr>
-<tr><td>TROW</td><td>0.89%</td></tr>
-<tr><td>HD</td><td>0.72%</td></tr>
-<tr><td>NVDA</td><td>0.54%</td></tr>
-<tr><td>QCOM</td><td>0.51%</td></tr>
-<tr><td>EURCAD</td><td>0.48%</td></tr>
-<tr><td>HE</td><td>0.47%</td></tr>
-<tr><td>AON</td><td>0.40%</td></tr>
-<tr><td>CTUSX</td><td>0.40%</td></tr>
-<tr><td>SBUX</td><td>0.39%</td></tr>
-<tr><td>AEP</td><td>0.38%</td></tr>
-<tr><td>NSC</td><td>0.36%</td></tr>
-<tr><td>D</td><td>0.32%</td></tr>
-<tr><td>XOM</td><td>0.31%</td></tr>
-<tr><td>MS</td><td>0.21%</td></tr>
-<tr><td>MRK</td><td>0.21%</td></tr>
-<tr><td>PLD</td><td>0.18%</td></tr>
-<tr><td>CSCO</td><td>0.17%</td></tr>
-<tr><td>PSA</td><td>0.08%</td></tr>
-<tr><td>AUDCAD</td><td>0.04%</td></tr>
-<tr><td>USDTUSD</td><td>0.01%</td></tr>
+<tr><td>BRK.A</td><td>100.00%</td></tr>
+<tr><td>DASHUSD</td><td>100.00%</td></tr>
+<tr><td>ETCUSD</td><td>100.00%</td></tr>
+<tr><td>XMRUSD</td><td>100.00%</td></tr>
+<tr><td>EW</td><td>99.94%</td></tr>
+<tr><td>NEE</td><td>99.91%</td></tr>
+<tr><td>CL</td><td>99.58%</td></tr>
+<tr><td>WMT</td><td>99.50%</td></tr>
+<tr><td>ZECUSD</td><td>99.47%</td></tr>
+<tr><td>TJX</td><td>99.45%</td></tr>
+<tr><td>MDT</td><td>99.43%</td></tr>
+<tr><td>EL</td><td>99.38%</td></tr>
+<tr><td>BLK</td><td>99.00%</td></tr>
+<tr><td>CME</td><td>99.00%</td></tr>
+<tr><td>EURJPY</td><td>99.00%</td></tr>
+<tr><td>GBPJPY</td><td>99.00%</td></tr>
+<tr><td>MO</td><td>98.99%</td></tr>
+<tr><td>NOW</td><td>98.99%</td></tr>
+<tr><td>VZ</td><td>98.93%</td></tr>
+<tr><td>LMT</td><td>98.83%</td></tr>
+<tr><td>ICE</td><td>98.51%</td></tr>
+<tr><td>AXP</td><td>98.50%</td></tr>
+<tr><td>FIS</td><td>98.41%</td></tr>
+<tr><td>ACN</td><td>98.32%</td></tr>
+<tr><td>USDJPY</td><td>98.30%</td></tr>
+<tr><td>DOGEUSD</td><td>98.22%</td></tr>
+<tr><td>IBM</td><td>98.00%</td></tr>
+<tr><td>USDCAD</td><td>98.00%</td></tr>
+<tr><td>ANTM</td><td>97.96%</td></tr>
+<tr><td>USDCHF</td><td>97.83%</td></tr>
+<tr><td>BNBUSD</td><td>97.50%</td></tr>
+<tr><td>EURGBP</td><td>97.00%</td></tr>
+<tr><td>SCHW</td><td>96.67%</td></tr>
+<tr><td>COST</td><td>96.45%</td></tr>
+<tr><td>SO</td><td>95.63%</td></tr>
+<tr><td>PEP</td><td>95.36%</td></tr>
+<tr><td>META</td><td>95.26%</td></tr>
+<tr><td>ADP</td><td>94.07%</td></tr>
+<tr><td>V</td><td>93.99%</td></tr>
+<tr><td>BA</td><td>93.53%</td></tr>
+<tr><td>KO</td><td>92.57%</td></tr>
+<tr><td>HON</td><td>92.50%</td></tr>
+<tr><td>ABT</td><td>91.60%</td></tr>
+<tr><td>TSLA</td><td>91.49%</td></tr>
+<tr><td>GOOGL</td><td>89.92%</td></tr>
+<tr><td>AAPL</td><td>89.18%</td></tr>
+<tr><td>T</td><td>88.01%</td></tr>
+<tr><td>C</td><td>87.40%</td></tr>
+<tr><td>PM</td><td>82.92%</td></tr>
+<tr><td>BKNG</td><td>81.60%</td></tr>
+<tr><td>DIS</td><td>81.21%</td></tr>
+<tr><td>USB</td><td>77.77%</td></tr>
+<tr><td>SYK</td><td>76.20%</td></tr>
+<tr><td>GM</td><td>74.95%</td></tr>
+<tr><td>TMUS</td><td>66.50%</td></tr>
+<tr><td>INTU</td><td>65.19%</td></tr>
+<tr><td>ORCL</td><td>32.38%</td></tr>
+<tr><td>FDX</td><td>30.62%</td></tr>
+<tr><td>MCD</td><td>28.98%</td></tr>
+<tr><td>NSC</td><td>27.22%</td></tr>
+<tr><td>TGT</td><td>23.91%</td></tr>
+<tr><td>CSCO</td><td>23.72%</td></tr>
+<tr><td>GE</td><td>22.23%</td></tr>
+<tr><td>ADBE</td><td>19.63%</td></tr>
+<tr><td>ITW</td><td>19.33%</td></tr>
+<tr><td>NFLX</td><td>17.61%</td></tr>
+<tr><td>CRM</td><td>16.81%</td></tr>
+<tr><td>UNH</td><td>16.74%</td></tr>
+<tr><td>APD</td><td>13.61%</td></tr>
+<tr><td>HD</td><td>12.01%</td></tr>
+<tr><td>JPM</td><td>11.50%</td></tr>
+<tr><td>JNJ</td><td>10.41%</td></tr>
+<tr><td>LLY</td><td>9.54%</td></tr>
+<tr><td>NZDUSD</td><td>9.00%</td></tr>
+<tr><td>ISRG</td><td>8.81%</td></tr>
+<tr><td>SBUX</td><td>7.65%</td></tr>
+<tr><td>NVDA</td><td>7.24%</td></tr>
+<tr><td>TROW</td><td>7.20%</td></tr>
+<tr><td>AON</td><td>7.09%</td></tr>
+<tr><td>AMZN</td><td>6.11%</td></tr>
+<tr><td>PLD</td><td>6.11%</td></tr>
+<tr><td>PYPL</td><td>6.09%</td></tr>
+<tr><td>NIO</td><td>5.61%</td></tr>
+<tr><td>SPGI</td><td>5.27%</td></tr>
+<tr><td>AMGN</td><td>5.26%</td></tr>
+<tr><td>CVS</td><td>5.20%</td></tr>
+<tr><td>AEP</td><td>4.65%</td></tr>
+<tr><td>EURUSD</td><td>4.50%</td></tr>
+<tr><td>CI</td><td>4.25%</td></tr>
+<tr><td>DHR</td><td>3.74%</td></tr>
+<tr><td>GS</td><td>3.59%</td></tr>
+<tr><td>QCOM</td><td>3.56%</td></tr>
+<tr><td>ZTS</td><td>3.49%</td></tr>
+<tr><td>LOW</td><td>3.47%</td></tr>
+<tr><td>PNC</td><td>3.17%</td></tr>
+<tr><td>XOM</td><td>3.11%</td></tr>
+<tr><td>MMM</td><td>3.08%</td></tr>
+<tr><td>CAT</td><td>3.00%</td></tr>
+<tr><td>DE</td><td>2.67%</td></tr>
+<tr><td>D</td><td>2.56%</td></tr>
+<tr><td>TXN</td><td>2.53%</td></tr>
+<tr><td>NKE</td><td>2.48%</td></tr>
+<tr><td>MRK</td><td>2.32%</td></tr>
+<tr><td>BMY</td><td>2.07%</td></tr>
+<tr><td>MSFT</td><td>2.03%</td></tr>
+<tr><td>MS</td><td>1.69%</td></tr>
+<tr><td>AUDUSD</td><td>1.50%</td></tr>
+<tr><td>GBPUSD</td><td>1.50%</td></tr>
+<tr><td>USDTUSD</td><td>1.50%</td></tr>
+<tr><td>MMC</td><td>1.26%</td></tr>
+<tr><td>INTC</td><td>1.25%</td></tr>
+<tr><td>MDLZ</td><td>1.04%</td></tr>
+<tr><td>BDX</td><td>1.02%</td></tr>
+<tr><td>CVX</td><td>1.00%</td></tr>
+<tr><td>DUK</td><td>0.78%</td></tr>
+<tr><td>ADI</td><td>0.58%</td></tr>
+<tr><td>NRG</td><td>0.11%</td></tr>
+<tr><td>PSA</td><td>0.04%</td></tr>
+<tr><td>PFE</td><td>0.04%</td></tr>
 </table></body></html>
