--- a/results/classifica.html
+++ b/results/classifica.html
@@ -1,143 +1,123 @@
 <html><head><title>Classifica dei Simboli</title></head><body>
 <h1>Classifica dei Simboli in Base alla Probabilità di Crescita</h1>
 <table border='1'><tr><th>Simbolo</th><th>Probabilità</th></tr>
-<tr><td>ETCUSD</td><td>99.97%</td></tr>
-<tr><td>RBUSD</td><td>99.94%</td></tr>
-<tr><td>ADP</td><td>99.94%</td></tr>
-<tr><td>XMRUSD</td><td>99.90%</td></tr>
-<tr><td>AUDJPY</td><td>99.87%</td></tr>
-<tr><td>ACN</td><td>99.85%</td></tr>
-<tr><td>KO</td><td>99.81%</td></tr>
-<tr><td>ATOMUSD</td><td>99.76%</td></tr>
-<tr><td>ADAUSD</td><td>99.74%</td></tr>
-<tr><td>ZCUSX</td><td>99.57%</td></tr>
-<tr><td>MSFT</td><td>99.56%</td></tr>
-<tr><td>GBPJPY</td><td>99.52%</td></tr>
-<tr><td>GBPJPY</td><td>99.52%</td></tr>
-<tr><td>COST</td><td>99.52%</td></tr>
-<tr><td>USDJPY</td><td>99.46%</td></tr>
-<tr><td>NEOUSD</td><td>99.44%</td></tr>
-<tr><td>BCHUSD</td><td>99.41%</td></tr>
-<tr><td>DASHUSD</td><td>99.40%</td></tr>
-<tr><td>IBM</td><td>99.38%</td></tr>
-<tr><td>CADJPY</td><td>99.35%</td></tr>
-<tr><td>GCUSD</td><td>99.33%</td></tr>
-<tr><td>USDCHF</td><td>99.27%</td></tr>
-<tr><td>ZTS</td><td>99.26%</td></tr>
-<tr><td>QCOM</td><td>99.26%</td></tr>
-<tr><td>ETHUSD</td><td>99.26%</td></tr>
-<tr><td>ZECUSD</td><td>99.25%</td></tr>
-<tr><td>LTCUSD</td><td>99.25%</td></tr>
-<tr><td>INTU</td><td>99.24%</td></tr>
-<tr><td>TGT</td><td>99.09%</td></tr>
-<tr><td>XAGUSD</td><td>99.08%</td></tr>
-<tr><td>JPM</td><td>99.06%</td></tr>
-<tr><td>FDX</td><td>99.04%</td></tr>
-<tr><td>XAUUSD</td><td>98.87%</td></tr>
-<tr><td>TJX</td><td>98.82%</td></tr>
-<tr><td>XTZUSD</td><td>98.74%</td></tr>
-<tr><td>USDTUSD</td><td>98.71%</td></tr>
-<tr><td>EURJPY</td><td>98.68%</td></tr>
-<tr><td>PYPL</td><td>98.66%</td></tr>
-<tr><td>LINKUSD</td><td>98.57%</td></tr>
-<tr><td>ZSUSX</td><td>98.55%</td></tr>
-<tr><td>NOW</td><td>98.50%</td></tr>
-<tr><td>V</td><td>98.47%</td></tr>
-<tr><td>AAPL</td><td>98.45%</td></tr>
-<tr><td>GOOGL</td><td>98.40%</td></tr>
-<tr><td>EOSUSD</td><td>98.26%</td></tr>
-<tr><td>NVDA</td><td>98.18%</td></tr>
-<tr><td>OJUSX</td><td>97.98%</td></tr>
-<tr><td>HON</td><td>97.88%</td></tr>
-<tr><td>DOGEUSD</td><td>97.81%</td></tr>
-<tr><td>EW</td><td>97.73%</td></tr>
-<tr><td>TMUS</td><td>97.71%</td></tr>
-<tr><td>TRXUSD</td><td>97.68%</td></tr>
-<tr><td>CTUSX</td><td>97.44%</td></tr>
-<tr><td>MS</td><td>97.38%</td></tr>
-<tr><td>ADI</td><td>97.35%</td></tr>
-<tr><td>SBUX</td><td>97.30%</td></tr>
-<tr><td>TSLA</td><td>97.25%</td></tr>
-<tr><td>CL</td><td>97.07%</td></tr>
-<tr><td>USB</td><td>97.03%</td></tr>
-<tr><td>WMT</td><td>97.01%</td></tr>
-<tr><td>ORCL</td><td>96.89%</td></tr>
-<tr><td>NRG</td><td>96.87%</td></tr>
-<tr><td>NKE</td><td>96.80%</td></tr>
-<tr><td>GS</td><td>96.50%</td></tr>
-<tr><td>CHFJPY</td><td>96.30%</td></tr>
-<tr><td>PNC</td><td>96.19%</td></tr>
-<tr><td>DE</td><td>95.69%</td></tr>
-<tr><td>CAT</td><td>95.68%</td></tr>
-<tr><td>META</td><td>95.20%</td></tr>
-<tr><td>XLMUSD</td><td>94.77%</td></tr>
-<tr><td>CRM</td><td>94.75%</td></tr>
-<tr><td>XRPUSD</td><td>94.15%</td></tr>
-<tr><td>NFLX</td><td>92.64%</td></tr>
-<tr><td>AMZN</td><td>92.62%</td></tr>
-<tr><td>HD</td><td>92.41%</td></tr>
-<tr><td>BTDR</td><td>91.19%</td></tr>
-<tr><td>BKNG</td><td>90.61%</td></tr>
-<tr><td>BNBUSD</td><td>89.10%</td></tr>
-<tr><td>BTCUSD</td><td>88.70%</td></tr>
-<tr><td>LMT</td><td>7.98%</td></tr>
-<tr><td>AXP</td><td>5.84%</td></tr>
-<tr><td>CCUSD</td><td>5.35%</td></tr>
-<tr><td>USDCAD</td><td>4.32%</td></tr>
-<tr><td>ITW</td><td>4.12%</td></tr>
-<tr><td>D</td><td>4.04%</td></tr>
-<tr><td>SYK</td><td>3.98%</td></tr>
-<tr><td>T</td><td>3.52%</td></tr>
-<tr><td>CVS</td><td>3.49%</td></tr>
-<tr><td>SO</td><td>3.38%</td></tr>
-<tr><td>TROW</td><td>3.03%</td></tr>
-<tr><td>EL</td><td>2.99%</td></tr>
-<tr><td>NZDUSD</td><td>2.91%</td></tr>
-<tr><td>GBPCHF</td><td>2.60%</td></tr>
-<tr><td>GM</td><td>2.58%</td></tr>
-<tr><td>EURGBP</td><td>2.52%</td></tr>
-<tr><td>EURAUD</td><td>2.50%</td></tr>
-<tr><td>PFE</td><td>2.48%</td></tr>
-<tr><td>LOW</td><td>2.47%</td></tr>
-<tr><td>CVX</td><td>2.47%</td></tr>
-<tr><td>SCHW</td><td>2.42%</td></tr>
-<tr><td>LNTH</td><td>2.37%</td></tr>
-<tr><td>BMY</td><td>2.37%</td></tr>
-<tr><td>EURCHF</td><td>2.30%</td></tr>
-<tr><td>DIS</td><td>2.26%</td></tr>
-<tr><td>DUK</td><td>2.14%</td></tr>
-<tr><td>LLY</td><td>2.10%</td></tr>
-<tr><td>GE</td><td>2.06%</td></tr>
-<tr><td>FIS</td><td>2.05%</td></tr>
-<tr><td>GBPUSD</td><td>1.91%</td></tr>
-<tr><td>ADBE</td><td>1.90%</td></tr>
-<tr><td>CSCO</td><td>1.86%</td></tr>
-<tr><td>INTC</td><td>1.52%</td></tr>
-<tr><td>CME</td><td>1.49%</td></tr>
-<tr><td>MCD</td><td>1.48%</td></tr>
-<tr><td>AUDUSD</td><td>1.35%</td></tr>
-<tr><td>PSA</td><td>1.34%</td></tr>
-<tr><td>EURNZD</td><td>1.32%</td></tr>
-<tr><td>AMGN</td><td>1.31%</td></tr>
-<tr><td>ICE</td><td>1.28%</td></tr>
-<tr><td>SCHL</td><td>1.19%</td></tr>
-<tr><td>PEP</td><td>1.16%</td></tr>
-<tr><td>JNJ</td><td>1.08%</td></tr>
-<tr><td>AON</td><td>1.01%</td></tr>
-<tr><td>APD</td><td>0.90%</td></tr>
-<tr><td>NIO</td><td>0.86%</td></tr>
-<tr><td>ABT</td><td>0.86%</td></tr>
-<tr><td>MMC</td><td>0.83%</td></tr>
-<tr><td>AEP</td><td>0.62%</td></tr>
-<tr><td>BDX</td><td>0.59%</td></tr>
-<tr><td>C</td><td>0.56%</td></tr>
-<tr><td>MRK</td><td>0.56%</td></tr>
-<tr><td>XOM</td><td>0.52%</td></tr>
-<tr><td>EURUSD</td><td>0.50%</td></tr>
-<tr><td>NSC</td><td>0.44%</td></tr>
-<tr><td>PLD</td><td>0.33%</td></tr>
-<tr><td>NAAS</td><td>0.29%</td></tr>
-<tr><td>EURCAD</td><td>0.10%</td></tr>
-<tr><td>HE</td><td>0.06%</td></tr>
-<tr><td>AUDCAD</td><td>0.04%</td></tr>
+<tr><td>ETCUSD</td><td>100.00%</td></tr>
+<tr><td>TMUS</td><td>100.00%</td></tr>
+<tr><td>USDJPY</td><td>100.00%</td></tr>
+<tr><td>XMRUSD</td><td>100.00%</td></tr>
+<tr><td>ZECUSD</td><td>99.99%</td></tr>
+<tr><td>DASHUSD</td><td>99.99%</td></tr>
+<tr><td>NEE</td><td>99.95%</td></tr>
+<tr><td>GBPJPY</td><td>99.50%</td></tr>
+<tr><td>MO</td><td>99.50%</td></tr>
+<tr><td>BRK.A</td><td>99.49%</td></tr>
+<tr><td>MDT</td><td>99.08%</td></tr>
+<tr><td>COST</td><td>99.00%</td></tr>
+<tr><td>DOGEUSD</td><td>99.00%</td></tr>
+<tr><td>BLK</td><td>98.96%</td></tr>
+<tr><td>KO</td><td>98.75%</td></tr>
+<tr><td>INTU</td><td>98.50%</td></tr>
+<tr><td>ORCL</td><td>98.50%</td></tr>
+<tr><td>WMT</td><td>98.50%</td></tr>
+<tr><td>TGT</td><td>98.48%</td></tr>
+<tr><td>VZ</td><td>98.44%</td></tr>
+<tr><td>NOW</td><td>97.88%</td></tr>
+<tr><td>USDCHF</td><td>97.83%</td></tr>
+<tr><td>BNBUSD</td><td>97.50%</td></tr>
+<tr><td>ACN</td><td>97.47%</td></tr>
+<tr><td>MSFT</td><td>96.50%</td></tr>
+<tr><td>ANTM</td><td>96.31%</td></tr>
+<tr><td>META</td><td>95.97%</td></tr>
+<tr><td>ZTS</td><td>95.81%</td></tr>
+<tr><td>SBUX</td><td>95.80%</td></tr>
+<tr><td>NFLX</td><td>95.00%</td></tr>
+<tr><td>BA</td><td>94.22%</td></tr>
+<tr><td>AMZN</td><td>94.00%</td></tr>
+<tr><td>GOOGL</td><td>93.99%</td></tr>
+<tr><td>EURJPY</td><td>93.46%</td></tr>
+<tr><td>QCOM</td><td>93.03%</td></tr>
+<tr><td>V</td><td>93.00%</td></tr>
+<tr><td>NKE</td><td>92.99%</td></tr>
+<tr><td>TJX</td><td>92.79%</td></tr>
+<tr><td>FDX</td><td>92.47%</td></tr>
+<tr><td>EW</td><td>92.12%</td></tr>
+<tr><td>PYPL</td><td>91.75%</td></tr>
+<tr><td>ADP</td><td>91.41%</td></tr>
+<tr><td>AAPL</td><td>90.47%</td></tr>
+<tr><td>USDTUSD</td><td>88.25%</td></tr>
+<tr><td>TSLA</td><td>86.19%</td></tr>
+<tr><td>NVDA</td><td>86.05%</td></tr>
+<tr><td>PM</td><td>84.21%</td></tr>
+<tr><td>BKNG</td><td>83.35%</td></tr>
+<tr><td>DE</td><td>82.50%</td></tr>
+<tr><td>GS</td><td>82.06%</td></tr>
+<tr><td>JPM</td><td>82.00%</td></tr>
+<tr><td>CRM</td><td>81.13%</td></tr>
+<tr><td>CAT</td><td>80.11%</td></tr>
+<tr><td>ADI</td><td>78.80%</td></tr>
+<tr><td>IBM</td><td>77.50%</td></tr>
+<tr><td>MS</td><td>76.40%</td></tr>
+<tr><td>CL</td><td>75.46%</td></tr>
+<tr><td>NRG</td><td>73.71%</td></tr>
+<tr><td>PNC</td><td>73.70%</td></tr>
+<tr><td>USB</td><td>68.44%</td></tr>
+<tr><td>HD</td><td>66.48%</td></tr>
+<tr><td>HON</td><td>66.25%</td></tr>
+<tr><td>NZDUSD</td><td>35.99%</td></tr>
+<tr><td>EL</td><td>27.92%</td></tr>
+<tr><td>T</td><td>25.44%</td></tr>
+<tr><td>ADBE</td><td>23.60%</td></tr>
+<tr><td>DIS</td><td>20.90%</td></tr>
+<tr><td>PFE</td><td>19.50%</td></tr>
+<tr><td>CVX</td><td>18.20%</td></tr>
+<tr><td>SCHW</td><td>18.07%</td></tr>
+<tr><td>LLY</td><td>17.74%</td></tr>
+<tr><td>AON</td><td>17.00%</td></tr>
+<tr><td>ABT</td><td>16.99%</td></tr>
+<tr><td>APD</td><td>15.75%</td></tr>
+<tr><td>MRK</td><td>15.21%</td></tr>
+<tr><td>PLD</td><td>14.13%</td></tr>
+<tr><td>AXP</td><td>13.50%</td></tr>
+<tr><td>UNH</td><td>13.43%</td></tr>
+<tr><td>GM</td><td>12.30%</td></tr>
+<tr><td>D</td><td>12.00%</td></tr>
+<tr><td>DUK</td><td>12.00%</td></tr>
+<tr><td>INTC</td><td>11.31%</td></tr>
+<tr><td>CME</td><td>11.18%</td></tr>
+<tr><td>ISRG</td><td>11.00%</td></tr>
+<tr><td>BMY</td><td>10.76%</td></tr>
+<tr><td>ICE</td><td>10.05%</td></tr>
+<tr><td>SO</td><td>9.53%</td></tr>
+<tr><td>NSC</td><td>9.00%</td></tr>
+<tr><td>MMM</td><td>8.74%</td></tr>
+<tr><td>BDX</td><td>8.51%</td></tr>
+<tr><td>FIS</td><td>7.89%</td></tr>
+<tr><td>TROW</td><td>7.09%</td></tr>
+<tr><td>MMC</td><td>7.00%</td></tr>
+<tr><td>PSA</td><td>6.87%</td></tr>
+<tr><td>LMT</td><td>6.83%</td></tr>
+<tr><td>CI</td><td>6.66%</td></tr>
+<tr><td>ITW</td><td>6.50%</td></tr>
+<tr><td>SYK</td><td>6.01%</td></tr>
+<tr><td>MCD</td><td>5.50%</td></tr>
+<tr><td>JNJ</td><td>5.15%</td></tr>
+<tr><td>CVS</td><td>5.00%</td></tr>
+<tr><td>USDCAD</td><td>5.00%</td></tr>
+<tr><td>EURUSD</td><td>4.50%</td></tr>
+<tr><td>GE</td><td>4.06%</td></tr>
+<tr><td>GBPUSD</td><td>4.00%</td></tr>
+<tr><td>NIO</td><td>3.85%</td></tr>
+<tr><td>DHR</td><td>3.63%</td></tr>
+<tr><td>C</td><td>3.57%</td></tr>
+<tr><td>PEP</td><td>3.50%</td></tr>
+<tr><td>XOM</td><td>3.18%</td></tr>
+<tr><td>AMGN</td><td>2.75%</td></tr>
+<tr><td>AEP</td><td>2.58%</td></tr>
+<tr><td>LOW</td><td>2.53%</td></tr>
+<tr><td>AUDUSD</td><td>2.50%</td></tr>
+<tr><td>EURGBP</td><td>2.50%</td></tr>
+<tr><td>SPGI</td><td>2.50%</td></tr>
+<tr><td>CSCO</td><td>2.30%</td></tr>
+<tr><td>TXN</td><td>1.50%</td></tr>
+<tr><td>MDLZ</td><td>0.80%</td></tr>
 </table></body></html>
