--- a/results/classifica.html
+++ b/results/classifica.html
@@ -1,143 +1,123 @@
 <html><head><title>Classifica dei Simboli</title></head><body>
 <h1>Classifica dei Simboli in Base alla Probabilità di Crescita</h1>
 <table border='1'><tr><th>Simbolo</th><th>Probabilità</th></tr>
-<tr><td>FIS</td><td>99.96%</td></tr>
-<tr><td>ETCUSD</td><td>99.96%</td></tr>
-<tr><td>QCOM</td><td>99.90%</td></tr>
-<tr><td>XMRUSD</td><td>99.88%</td></tr>
-<tr><td>INTU</td><td>99.81%</td></tr>
-<tr><td>AUDJPY</td><td>99.80%</td></tr>
-<tr><td>ADAUSD</td><td>99.75%</td></tr>
-<tr><td>USDCHF</td><td>99.72%</td></tr>
-<tr><td>MSFT</td><td>99.65%</td></tr>
-<tr><td>NEOUSD</td><td>99.65%</td></tr>
-<tr><td>ATOMUSD</td><td>99.65%</td></tr>
-<tr><td>ETHUSD</td><td>99.60%</td></tr>
-<tr><td>GCUSD</td><td>99.57%</td></tr>
-<tr><td>TMUS</td><td>99.54%</td></tr>
-<tr><td>CTUSX</td><td>99.53%</td></tr>
-<tr><td>XAUUSD</td><td>99.51%</td></tr>
-<tr><td>ADBE</td><td>99.45%</td></tr>
-<tr><td>RBUSD</td><td>99.44%</td></tr>
-<tr><td>FDX</td><td>99.43%</td></tr>
-<tr><td>USDTUSD</td><td>99.42%</td></tr>
-<tr><td>BCHUSD</td><td>99.41%</td></tr>
-<tr><td>CADJPY</td><td>99.40%</td></tr>
-<tr><td>GBPJPY</td><td>99.39%</td></tr>
-<tr><td>GBPJPY</td><td>99.39%</td></tr>
-<tr><td>ZTS</td><td>99.25%</td></tr>
-<tr><td>NKE</td><td>99.14%</td></tr>
-<tr><td>ZECUSD</td><td>99.05%</td></tr>
-<tr><td>XTZUSD</td><td>98.91%</td></tr>
-<tr><td>ZSUSX</td><td>98.68%</td></tr>
-<tr><td>LTCUSD</td><td>98.67%</td></tr>
-<tr><td>V</td><td>98.61%</td></tr>
-<tr><td>PYPL</td><td>98.55%</td></tr>
-<tr><td>GOOGL</td><td>98.24%</td></tr>
-<tr><td>COST</td><td>98.23%</td></tr>
-<tr><td>SBUX</td><td>98.20%</td></tr>
-<tr><td>CAT</td><td>98.19%</td></tr>
-<tr><td>GBPCHF</td><td>98.00%</td></tr>
-<tr><td>ADI</td><td>97.98%</td></tr>
-<tr><td>SCHW</td><td>97.98%</td></tr>
-<tr><td>LINKUSD</td><td>97.97%</td></tr>
-<tr><td>TSLA</td><td>97.95%</td></tr>
-<tr><td>DASHUSD</td><td>97.81%</td></tr>
-<tr><td>WMT</td><td>97.80%</td></tr>
-<tr><td>AXP</td><td>97.58%</td></tr>
-<tr><td>DOGEUSD</td><td>97.57%</td></tr>
-<tr><td>EW</td><td>97.57%</td></tr>
-<tr><td>USDJPY</td><td>97.51%</td></tr>
-<tr><td>TGT</td><td>97.45%</td></tr>
-<tr><td>TRXUSD</td><td>97.42%</td></tr>
-<tr><td>EURJPY</td><td>97.32%</td></tr>
-<tr><td>EOSUSD</td><td>97.28%</td></tr>
-<tr><td>ACN</td><td>97.25%</td></tr>
-<tr><td>NRG</td><td>96.77%</td></tr>
-<tr><td>NVDA</td><td>96.63%</td></tr>
-<tr><td>BKNG</td><td>96.40%</td></tr>
-<tr><td>GS</td><td>96.39%</td></tr>
-<tr><td>DE</td><td>96.36%</td></tr>
-<tr><td>AON</td><td>96.24%</td></tr>
-<tr><td>MS</td><td>96.15%</td></tr>
-<tr><td>LNTH</td><td>95.95%</td></tr>
-<tr><td>XLMUSD</td><td>95.44%</td></tr>
-<tr><td>META</td><td>95.43%</td></tr>
-<tr><td>JPM</td><td>95.35%</td></tr>
-<tr><td>CHFJPY</td><td>95.23%</td></tr>
-<tr><td>ORCL</td><td>93.90%</td></tr>
-<tr><td>EURCHF</td><td>93.46%</td></tr>
-<tr><td>XRPUSD</td><td>92.89%</td></tr>
-<tr><td>NOW</td><td>91.13%</td></tr>
-<tr><td>AMZN</td><td>90.51%</td></tr>
-<tr><td>BTCUSD</td><td>88.06%</td></tr>
-<tr><td>NFLX</td><td>88.04%</td></tr>
-<tr><td>BNBUSD</td><td>87.98%</td></tr>
-<tr><td>BTDR</td><td>86.61%</td></tr>
-<tr><td>CRM</td><td>84.74%</td></tr>
-<tr><td>CCUSD</td><td>14.02%</td></tr>
-<tr><td>TJX</td><td>11.35%</td></tr>
-<tr><td>AAPL</td><td>9.79%</td></tr>
-<tr><td>USB</td><td>4.59%</td></tr>
-<tr><td>ICE</td><td>4.52%</td></tr>
-<tr><td>ZCUSX</td><td>4.20%</td></tr>
-<tr><td>NZDUSD</td><td>3.80%</td></tr>
-<tr><td>D</td><td>3.75%</td></tr>
-<tr><td>OJUSX</td><td>3.68%</td></tr>
-<tr><td>LMT</td><td>3.54%</td></tr>
-<tr><td>USDCAD</td><td>3.53%</td></tr>
-<tr><td>BDX</td><td>3.45%</td></tr>
-<tr><td>PFE</td><td>3.11%</td></tr>
-<tr><td>EL</td><td>3.02%</td></tr>
-<tr><td>SO</td><td>2.99%</td></tr>
-<tr><td>ADP</td><td>2.89%</td></tr>
-<tr><td>CVS</td><td>2.73%</td></tr>
-<tr><td>LOW</td><td>2.64%</td></tr>
-<tr><td>LLY</td><td>2.56%</td></tr>
-<tr><td>ITW</td><td>2.44%</td></tr>
-<tr><td>XAGUSD</td><td>2.41%</td></tr>
-<tr><td>IBM</td><td>2.18%</td></tr>
-<tr><td>DIS</td><td>2.10%</td></tr>
-<tr><td>SYK</td><td>1.89%</td></tr>
-<tr><td>T</td><td>1.86%</td></tr>
-<tr><td>GBPUSD</td><td>1.84%</td></tr>
-<tr><td>EURGBP</td><td>1.48%</td></tr>
-<tr><td>NIO</td><td>1.34%</td></tr>
-<tr><td>GM</td><td>1.26%</td></tr>
-<tr><td>KO</td><td>1.19%</td></tr>
-<tr><td>INTC</td><td>1.17%</td></tr>
-<tr><td>AUDUSD</td><td>1.00%</td></tr>
-<tr><td>HD</td><td>0.85%</td></tr>
-<tr><td>CME</td><td>0.83%</td></tr>
-<tr><td>DUK</td><td>0.81%</td></tr>
-<tr><td>AMGN</td><td>0.81%</td></tr>
-<tr><td>EURNZD</td><td>0.74%</td></tr>
-<tr><td>PEP</td><td>0.73%</td></tr>
-<tr><td>MRK</td><td>0.72%</td></tr>
-<tr><td>PNC</td><td>0.71%</td></tr>
-<tr><td>C</td><td>0.69%</td></tr>
-<tr><td>MCD</td><td>0.69%</td></tr>
-<tr><td>EURCAD</td><td>0.63%</td></tr>
-<tr><td>EURUSD</td><td>0.61%</td></tr>
-<tr><td>GE</td><td>0.58%</td></tr>
-<tr><td>TROW</td><td>0.58%</td></tr>
-<tr><td>BMY</td><td>0.55%</td></tr>
-<tr><td>SCHL</td><td>0.54%</td></tr>
-<tr><td>AEP</td><td>0.48%</td></tr>
-<tr><td>APD</td><td>0.46%</td></tr>
-<tr><td>CSCO</td><td>0.43%</td></tr>
-<tr><td>CVX</td><td>0.37%</td></tr>
-<tr><td>PLD</td><td>0.36%</td></tr>
-<tr><td>ABT</td><td>0.35%</td></tr>
-<tr><td>MMC</td><td>0.34%</td></tr>
-<tr><td>CL</td><td>0.31%</td></tr>
-<tr><td>AUDCAD</td><td>0.30%</td></tr>
-<tr><td>NAAS</td><td>0.26%</td></tr>
-<tr><td>HON</td><td>0.22%</td></tr>
-<tr><td>PSA</td><td>0.19%</td></tr>
-<tr><td>XOM</td><td>0.16%</td></tr>
-<tr><td>HE</td><td>0.13%</td></tr>
-<tr><td>JNJ</td><td>0.11%</td></tr>
-<tr><td>EURAUD</td><td>0.06%</td></tr>
-<tr><td>NSC</td><td>0.01%</td></tr>
+<tr><td>DASHUSD</td><td>100.00%</td></tr>
+<tr><td>USDJPY</td><td>100.00%</td></tr>
+<tr><td>WMT</td><td>100.00%</td></tr>
+<tr><td>XMRUSD</td><td>100.00%</td></tr>
+<tr><td>ZECUSD</td><td>100.00%</td></tr>
+<tr><td>TMUS</td><td>99.97%</td></tr>
+<tr><td>ETCUSD</td><td>99.50%</td></tr>
+<tr><td>EURJPY</td><td>99.50%</td></tr>
+<tr><td>GBPJPY</td><td>99.50%</td></tr>
+<tr><td>INTU</td><td>99.50%</td></tr>
+<tr><td>MDT</td><td>99.46%</td></tr>
+<tr><td>BRK.A</td><td>99.45%</td></tr>
+<tr><td>VZ</td><td>99.38%</td></tr>
+<tr><td>MO</td><td>99.24%</td></tr>
+<tr><td>QCOM</td><td>99.24%</td></tr>
+<tr><td>BLK</td><td>99.00%</td></tr>
+<tr><td>DOGEUSD</td><td>99.00%</td></tr>
+<tr><td>NOW</td><td>99.00%</td></tr>
+<tr><td>USDTUSD</td><td>99.00%</td></tr>
+<tr><td>MSFT</td><td>98.78%</td></tr>
+<tr><td>NFLX</td><td>98.50%</td></tr>
+<tr><td>NEE</td><td>98.40%</td></tr>
+<tr><td>USDCHF</td><td>97.99%</td></tr>
+<tr><td>BKNG</td><td>97.92%</td></tr>
+<tr><td>ORCL</td><td>97.85%</td></tr>
+<tr><td>PYPL</td><td>97.66%</td></tr>
+<tr><td>FIS</td><td>97.29%</td></tr>
+<tr><td>TGT</td><td>97.27%</td></tr>
+<tr><td>BNBUSD</td><td>97.26%</td></tr>
+<tr><td>ANTM</td><td>97.17%</td></tr>
+<tr><td>GS</td><td>96.55%</td></tr>
+<tr><td>NKE</td><td>96.28%</td></tr>
+<tr><td>NVDA</td><td>96.00%</td></tr>
+<tr><td>ZTS</td><td>95.59%</td></tr>
+<tr><td>AMZN</td><td>95.00%</td></tr>
+<tr><td>GOOGL</td><td>94.50%</td></tr>
+<tr><td>META</td><td>94.04%</td></tr>
+<tr><td>DE</td><td>93.93%</td></tr>
+<tr><td>TSLA</td><td>93.86%</td></tr>
+<tr><td>V</td><td>93.75%</td></tr>
+<tr><td>NRG</td><td>92.95%</td></tr>
+<tr><td>BA</td><td>89.81%</td></tr>
+<tr><td>EW</td><td>87.77%</td></tr>
+<tr><td>FDX</td><td>87.63%</td></tr>
+<tr><td>COST</td><td>87.14%</td></tr>
+<tr><td>ADI</td><td>84.11%</td></tr>
+<tr><td>ADBE</td><td>82.95%</td></tr>
+<tr><td>PM</td><td>81.56%</td></tr>
+<tr><td>SCHW</td><td>80.40%</td></tr>
+<tr><td>AON</td><td>78.08%</td></tr>
+<tr><td>CRM</td><td>76.70%</td></tr>
+<tr><td>SBUX</td><td>76.63%</td></tr>
+<tr><td>JPM</td><td>76.03%</td></tr>
+<tr><td>CAT</td><td>75.78%</td></tr>
+<tr><td>ACN</td><td>71.42%</td></tr>
+<tr><td>MS</td><td>70.98%</td></tr>
+<tr><td>AXP</td><td>66.78%</td></tr>
+<tr><td>T</td><td>36.64%</td></tr>
+<tr><td>AAPL</td><td>32.50%</td></tr>
+<tr><td>XOM</td><td>26.76%</td></tr>
+<tr><td>ICE</td><td>26.32%</td></tr>
+<tr><td>LLY</td><td>26.31%</td></tr>
+<tr><td>DIS</td><td>25.30%</td></tr>
+<tr><td>TJX</td><td>20.01%</td></tr>
+<tr><td>EL</td><td>19.47%</td></tr>
+<tr><td>BDX</td><td>16.83%</td></tr>
+<tr><td>HD</td><td>16.50%</td></tr>
+<tr><td>ISRG</td><td>14.50%</td></tr>
+<tr><td>NIO</td><td>14.43%</td></tr>
+<tr><td>UNH</td><td>14.32%</td></tr>
+<tr><td>JNJ</td><td>13.23%</td></tr>
+<tr><td>INTC</td><td>11.35%</td></tr>
+<tr><td>SYK</td><td>10.13%</td></tr>
+<tr><td>APD</td><td>9.35%</td></tr>
+<tr><td>CSCO</td><td>7.68%</td></tr>
+<tr><td>MMM</td><td>7.26%</td></tr>
+<tr><td>KO</td><td>6.25%</td></tr>
+<tr><td>CVX</td><td>6.14%</td></tr>
+<tr><td>LOW</td><td>5.93%</td></tr>
+<tr><td>GM</td><td>5.35%</td></tr>
+<tr><td>TROW</td><td>4.26%</td></tr>
+<tr><td>USB</td><td>4.08%</td></tr>
+<tr><td>EURGBP</td><td>4.00%</td></tr>
+<tr><td>IBM</td><td>4.00%</td></tr>
+<tr><td>PSA</td><td>3.60%</td></tr>
+<tr><td>CI</td><td>3.57%</td></tr>
+<tr><td>MCD</td><td>3.50%</td></tr>
+<tr><td>PFE</td><td>3.50%</td></tr>
+<tr><td>DHR</td><td>3.47%</td></tr>
+<tr><td>GE</td><td>3.21%</td></tr>
+<tr><td>C</td><td>3.00%</td></tr>
+<tr><td>PLD</td><td>2.75%</td></tr>
+<tr><td>PNC</td><td>2.74%</td></tr>
+<tr><td>CVS</td><td>2.50%</td></tr>
+<tr><td>D</td><td>2.11%</td></tr>
+<tr><td>USDCAD</td><td>2.00%</td></tr>
+<tr><td>MRK</td><td>1.94%</td></tr>
+<tr><td>AMGN</td><td>1.91%</td></tr>
+<tr><td>MDLZ</td><td>1.76%</td></tr>
+<tr><td>DUK</td><td>1.55%</td></tr>
+<tr><td>NSC</td><td>1.53%</td></tr>
+<tr><td>LMT</td><td>1.36%</td></tr>
+<tr><td>TXN</td><td>1.12%</td></tr>
+<tr><td>SO</td><td>1.05%</td></tr>
+<tr><td>ITW</td><td>1.01%</td></tr>
+<tr><td>NZDUSD</td><td>1.00%</td></tr>
+<tr><td>AEP</td><td>0.81%</td></tr>
+<tr><td>ABT</td><td>0.66%</td></tr>
+<tr><td>MMC</td><td>0.63%</td></tr>
+<tr><td>PEP</td><td>0.54%</td></tr>
+<tr><td>ADP</td><td>0.52%</td></tr>
+<tr><td>AUDUSD</td><td>0.50%</td></tr>
+<tr><td>SPGI</td><td>0.50%</td></tr>
+<tr><td>BMY</td><td>0.16%</td></tr>
+<tr><td>CL</td><td>0.08%</td></tr>
+<tr><td>GBPUSD</td><td>0.01%</td></tr>
+<tr><td>CME</td><td>0.00%</td></tr>
+<tr><td>EURUSD</td><td>0.00%</td></tr>
+<tr><td>HON</td><td>0.00%</td></tr>
 </table></body></html>
